--- a/profiles/templates/profiles/global-base-ui/global_base_ui.html
+++ b/profiles/templates/profiles/global-base-ui/global_base_ui.html
@@ -18,6 +18,7 @@
     <script src="{% static 'fullcalendar-4.1.0/packages/core/main.js' %}"></script>
     <script src="{% static 'fullcalendar-4.1.0/packages/daygrid/main.js' %}"></script>
     <script src="{% static 'fullcalendar-4.1.0/packages/timegrid/main.js' %}"></script>
+    <script src="{% static 'fullcalendar-4.1.0/packages/list/main.js' %}"></script>
     <script src="{% static 'fullcalendar-4.1.0/packages/moment/main.min.js' %}"></script>
 
 
@@ -28,6 +29,11 @@
     <link href="{% static 'fullcalendar-4.1.0/packages/core/main.css' %}" rel='stylesheet' />
     <link href="{% static 'fullcalendar-4.1.0/packages/daygrid/main.css' %}" rel='stylesheet' />
     <link href="{% static 'fullcalendar-4.1.0/packages/timegrid/main.css' %}" rel='stylesheet' />
+
+    <!--Make this local-->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.js"></script>
 
 </head>
 <body class="Site">
